# GLESDemo

app/: build.gradle
app/src/androidTest/java/i3d/glesdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  _android_debug.h  _egl_manager.h  native-lib.cpp
app/src/main/java/i3d/glesdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/i3d/glesdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
